--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,29 @@
 Package: FoodDemandApp
-Title: What the Package Does (One Line, Title Case)
+Title: Food demand forecast
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Gouthaman",
+           family = "Tharmathasan",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "gouthaman87@hotmail.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Fit suitable Machine Learning models to forecast food demand.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports: 
+    data.table (>= 1.14.0),
+    dplyr (>= 1.0.6),
+    logger (>= 0.2.0),
+    magrittr (>= 2.0.1),
+    purrr (>= 0.3.4),
+    rlang (>= 0.4.11),
+    tibble (>= 3.1.2),
+    tidyr (>= 1.1.3),
+    timetk (>= 2.6.1),
+    tsibble (>= 1.0.1)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
