--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,12 +18,20 @@ Imports:
     dplyr (>= 1.0.6),
     logger (>= 0.2.0),
     magrittr (>= 2.0.1),
+    mlflow (>= 1.18.0),
+    modeltime (>= 0.6.1),
+    parsnip (>= 0.1.6),
     purrr (>= 0.3.4),
+    recipes (>= 0.1.16),
     rlang (>= 0.4.11),
+    rsample (>= 0.1.0),
     tibble (>= 3.1.2),
     tidyr (>= 1.1.3),
     timetk (>= 2.6.1),
-    tsibble (>= 1.0.1)
+    tsibble (>= 1.0.1),
+    tune (>= 0.1.5),
+    workflows (>= 0.2.2),
+    workflowsets (>= 0.0.2)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
