--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,26 +12,28 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Imports: 
     dplyr (>= 1.0.6),
+    glue,
+    h2o,
     logger (>= 0.2.0),
-    magrittr (>= 2.0.1),
-    mlflow (>= 1.18.0),
+    Metrics,
     modeltime (>= 0.6.1),
     parsnip (>= 0.1.6),
     purrr (>= 0.3.4),
     recipes (>= 0.1.16),
-    rlang (>= 0.4.11),
     rsample (>= 0.1.0),
+    stringr,
     tibble (>= 3.1.2),
     tidyr (>= 1.1.3),
     timetk (>= 2.6.1),
     tsibble (>= 1.0.1),
-    tune (>= 0.1.5),
-    workflows (>= 0.2.2),
+    withr,
     workflowsets (>= 0.0.2)
 Suggests: 
     data.table (>= 1.14.0),
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Depends: 
+    R (>= 2.10)
