--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,15 +12,18 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 Imports: 
     dplyr (>= 1.0.6),
+    forcats,
+    ggplot2,
     glue,
     h2o,
     logger (>= 0.2.0),
     Metrics,
     modeltime (>= 0.6.1),
     parsnip (>= 0.1.6),
+    plotly,
     purrr (>= 0.3.4),
     recipes (>= 0.1.16),
     rsample (>= 0.1.0),
@@ -28,7 +31,9 @@ Imports:
     tibble (>= 3.1.2),
     tidyr (>= 1.1.3),
     timetk (>= 2.6.1),
-    tsibble (>= 1.0.1),
+    tsintermittent,
+    vip,
+    viridis,
     withr,
     workflowsets (>= 0.0.2)
 Suggests: 
